Prevent page breaks inside boxes

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -39,6 +39,7 @@ tr.solid-bottom-border {
   margin-right: 12px;
   margin-bottom: 12px;
   padding: 15px 10px;
+  page-break-inside: avoid;
 }
 
 .summary-box-eligible,
